<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">andbtiles</string>
    <string name="placeholder">Placeholder</string>

    <string name="action_add">Add Provider</string>
    <string name="action_local">Local</string>
    <string name="action_internet">From the Internet</string>
    <string name="action_filter">Filter results…</string>

    <string name="hint_no_maps">No saved maps.</string>
    <string name="hint_no_maps_tap">Tap</string>
    <string name="hint_no_maps_provider">to add a new provider.</string>
    <string name="hint_searching_mbtiles">Searching for .mbtiles files…</string>
    <string name="hint_no_results">No filter results.</string>
    <string name="hint_no_file_selected">No file selected</string>
    <string name="hint_no_cache">No Cache\n(act like proxy)</string>
    <string name="hint_on_demand">On Demand\n(cache only requested tiles)</string>
    <string name="hint_cache">Full Cache\n(harvest all tiles)</string>
    <string name="hint_data_only">Data Only\n(cache only the .mbtiles data)</string>
    <string name="hint_browse_list">or select one from the list:</string>
    <string name="hint_fetchng_data">Fetching data…</string>
    <string name="hint_url">Enter a URL to TileJSON or MBTiles file…</string>
    <string name="hint_url_error">Please enter a valid URL</string>
    <string name="hint_harvest_tiles_number" formatted="false">Harvest %d tiles?</string>

    <string name="btn_browse">Browse…</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_confirm">Confirm</string>
    <string name="btn_fetch">Fetch</string>
    <string name="btn_fetching">Fetching…</string>
    <string name="btn_download">Download</string>

    <string name="crouton_invalid_file">Please select a valid map.</string>
    <string name="crouton_database_error">Cannot save map, please select another file and try again.</string>
    <string name="crouton_map_added">Map successfully added.</string>
    <string name="crouton_fetch_error">No maps found. Please check your internet connection, enter a valid URL and try again.</string>
    <string name="crouton_download_complete">Download complete</string>
    <string name="crouton_map_exsists">Map already added.</string>
    <string name="crouton_file_exists">File already exists on SD. Add to maps?</string>
    <string name="crouton_downloading">Downloading file…</string>
    <string name="crouton_harvesting">Harvesting tiles…</string>

    <string name="dialog_title_local_provider">Add Local Provider</string>
    <string name="dialog_message_local_provider" formatted="false">Use %s as a local provider?</string>

    <string name="title_local_provider">New Local Provider</string>
    <string name="title_internet_provider">New Internet Provider</string>

</resources>
