<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radio_options"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/paddding_standard">

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/paddding_standard"
            android:text="@string/hint_no_cache" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/paddding_standard"
            android:text="@string/hint_on_demand" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/paddding_standard"
            android:text="@string/hint_cache" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/paddding_standard"
            android:text="@string/hint_data_only" />
    </RadioGroup>
</LinearLayout>